fixed bugs, added further functions
